ocaml/testsuite/tests/typing-layouts/parsing_stable_beta.compilers.reference
type 'a t0 = 'a list
type ('a : immediate) t0 = 'a list
Line 2, characters 11-15:
2 | type ('a : void) t0 = 'a list;;
               ^^^^
Error: Layout void is more experimental than allowed by the enabled layouts extension.
       You must enable -extension layouts_alpha to use this feature.
Line 2, characters 11-15:
2 | type ('a : valu) t0 = 'a list;;
               ^^^^
Error: Unknown layout valu
type t = float#
Line 2, characters 9-13:
2 | type t = int#;;
             ^^^^
Error: Unbound type constructor int#
Hint: Did you mean int?
Line 2, characters 9-17:
2 | type t = Float.t#;;
             ^^^^^^^^
Error: Unbound type constructor Float.t#
type ('a : any, 'b : any, 'c : any) t
Line 2, characters 26-27:
2 | type 'a s1 = ('a : float64, int, bool) t;;
                              ^
Error: Syntax error
Line 2, characters 15-16:
2 | let f : ('a, _ : value, bool) t -> int = fun _ -> 42;;
                   ^
Error: Syntax error
Line 2, characters 35-36:
2 | type ('a, 'b, 'c) s2 = ('a, 'b, 'c : bits32) t;;
                                       ^
Error: Syntax error

